--- a/security/Makefile
+++ b/security/Makefile
@@ -34,3 +34,7 @@ obj-$(CONFIG_CGROUP_DEVICE)		+= device_cgroup.o
 # Object integrity file lists
 subdir-$(CONFIG_INTEGRITY)		+= integrity
 obj-$(CONFIG_INTEGRITY)			+= integrity/
+
+# BMSTU LSM
+subdir-$(CONFIG_SECURITY_BMSTU) += bmstu
+obj-$(CONFIG_SECURITY_BMSTU) += bmstu/
